--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cypress": "^14.5.4"
+    "cypress": "^14.5.4",
+    "dotenv": "^17.2.1",
+    "otplib": "^12.0.1"
   }
 }
